# Colorer-library

./: CMakeLists.txt
src/colorer/common/: Colorer.cpp
src/colorer/parsers/: HRCParserImpl.cpp  ParserFactory.cpp  TextParserHelpers.cpp
src/colorer/utils/: LogFileSink.cpp
tools/colorer/: ConsoleToolsRunner.cpp
